<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/blue_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/prgBarRegister"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.aink.submission1.utils.NamaEditText
        android:id="@+id/ed_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/nama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <com.aink.submission1.utils.EmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/ed_register_name"
        app:layout_constraintStart_toStartOf="@id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        app:layout_constraintVertical_bias="0.18" />

    <com.aink.submission1.utils.PasswordEditText
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        app:layout_constraintEnd_toEndOf="@id/ed_register_email"/>

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:backgroundTint="@color/pink_500"
        app:layout_constraintStart_toStartOf="@id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        app:layout_constraintEnd_toEndOf="@id/ed_register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>